# no-base-class-ut-stuff

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: array_of_arrays_message.h  int_string_message.h  main.cpp  message_builder.h  message_deserializer.cpp  message_deserializer.h  message_id.h  message_input_stream.h  message_output_stream.h  message_serializer.cpp  message_serializer.h  mockable.h  return_code.h
test/: no_base_class_ut_stuff_test.cpp  serialization_test.cpp
